crates/runtime/tests/models/snapshots/integration_models__models__embedding__hf_minilm_alpha_base64.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response_raw)
---
{
  "data": [
    {
      "embedding": "str_len_2048",
      "index": 0,
      "object": "embedding"
    }
  ],
  "model": "hf_minilm",
  "object": "list",
  "usage": {
    "prompt_tokens": 128,
    "total_tokens": 128
  }
}
