crates/runtime/tests/models/snapshots/integration_models__models__embedding__openai_embeddings_alpha_base64.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response_raw)
---
{
  "data": [
    {
      "embedding": "str_len_8192",
      "index": 0,
      "object": "embedding"
    }
  ],
  "model": "openai_embeddings",
  "object": "list",
  "usage": {
    "prompt_tokens": 8,
    "total_tokens": 8
  }
}
