crates/runtime/tests/models/snapshots/integration_models__models__embedding__openai_embeddings_alpha_string_array.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response_raw)
---
{
  "data": [
    {
      "embedding": "array_256_items",
      "index": 0,
      "object": "embedding"
    },
    {
      "embedding": "array_256_items",
      "index": 1,
      "object": "embedding"
    }
  ],
  "model": "openai_embeddings",
  "object": "list",
  "usage": {
    "prompt_tokens": 8,
    "total_tokens": 8
  }
}
