crates/runtime/tests/models/snapshots/integration_models__models__embedding__openai_embeddings_base64_format.snap
---
source: crates/runtime/tests/models/embedding.rs
expression: normalize_embeddings_response(response)
---
{
  "data": [
    {
      "embedding": "str_len_684",
      "index": 0,
      "object": "embedding"
    },
    {
      "embedding": "str_len_684",
      "index": 1,
      "object": "embedding"
    }
  ],
  "model": "openai_embeddings",
  "object": "list",
  "usage": {
    "prompt_tokens": 8,
    "total_tokens": 8
  }
}
